# kiboserve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
docs/: CNAME  demo.webm  index.html  style.css
examples/: a2a_client_example.py  a2a_server_example.py  agent_client_example.py  agent_server_example.py  chainlit_example.py  mcp_client_example.py  mcp_server_example.py  mtls_example.py  multi_agent_example.py  stream_client_example.py  stream_server_example.py  studio_example.py
kiboup/: __init__.py
kiboup/a2a/: __init__.py  client.py  server.py  types.py  utils.py
kiboup/http/: __init__.py  client.py  server.py
kiboup/mcp/: __init__.py  client.py  server.py
kiboup/shared/: __init__.py  banner.py  entities.py  logger.py  middleware.py  protocols.py  starlette.py  tls.py
kiboup/studio/: __init__.py  collector.py  db.py  discovery.py  entities.py  evaluator.py  feature_flags.py  middleware.py  prompts.py  sdk.py  server.py  tracer.py
kiboup/studio/ui/static/css/: studio.css
kiboup/studio/ui/static/js/: studio.js
kiboup/studio/ui/templates/: chat.html  discovery.html  eval.html  flags.html  index.html  prompts.html  studio.html  trace_detail.html  traces.html
scripts/: release.sh
