[project]
name = "kiboup"
version = "0.1.0"
description = "Framework-agnostic library for deploying AI agents via HTTP, A2A, and MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.28.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "wsproto>=1.3.2",
]

[project.optional-dependencies]
a2a = ["a2a-sdk>=0.2.0"]
mcp = ["fastmcp>=2.0.0"]
studio = ["aiosqlite>=0.20.0", "openai>=1.0.0"]
all = ["a2a-sdk>=0.2.0", "fastmcp>=2.0.0", "aiosqlite>=0.20.0", "openai>=1.0.0"]
examples = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "chainlit>=2.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
